<resources>
    <string name="app_name">AlkeWalletAndroid</string>
    <string name="logo">logo</string>
    <string name="btn1">Crear cuenta nueva</string>
    <string name="oval">oval</string>
    <string name="oval2">oval2</string>
    <string name="btn2">Ya tienes cuenta?</string>
    <string name="logo2">logo2</string>
    <string name="textv1">El lugar mas seguro para tu dinero</string>
    <string name="btn3">Login</string>
    <string name="btn4">Crear una nueva cuenta</string>
    <string name="btn5">Olvidaste tu contraseña?</string>
    <string name="textv2">Acceso Cliente</string>
    <string name="textv3">Email</string>
    <string name="textv4">Contraseña</string>
    <string name="Email">Ingrese su email</string>
    <string name="Password">Ingrese su contraseña</string>
    <string name="ojo">ojo</string>
    <string name="textv5">Registro Cliente</string>
    <string name="textv6">Nombres</string>
    <string name="textv7">Apellidos</string>
    <string name="textv8">Email</string>
    <string name="textv9">Contraseña</string>
    <string name="textv10">Reingresar Contraseña</string>
    <string name="nombres">Ingresar nombres</string>
    <string name="apellidos">Ingresar apellidos</string>
    <string name="Email2">Ingrese su correo electronico</string>
    <string name="Password2">Ingrese una clave de 6 numeros</string>
    <string name="RPassword">Ingrese nuevamente los 6 numeros</string>
    <string name="btn6">Crear Cuenta</string>
    <string name="btn7">Ya tienes una cuenta?</string>
    <string name="ojo2">ojo2</string>
    <string name="ojo3">ojo3</string>
    <string name="textv11">Mi Perfil</string>
    <string name="textv12">Scarlett Johansson</string>
    <string name="textv13">Mi Informacion</string>
    <string name="textv14">Mis Tarjetas</string>
    <string name="textv15">Opciones</string>
    <string name="textv16">Centro de Ayuda</string>
    <string name="arrow1">arrow</string>
    <string name="arrow2">arrow2</string>
    <string name="arrow3">arrow3</string>
    <string name="arrow4">arrow4</string>
    <string name="circulo">circulo</string>
    <string name="profile">profile</string>
    <string name="card">card</string>
    <string name="settings">settings</string>
    <string name="help">help</string>
    <string name="lapiz">modificar perfil</string>
    <string name="scarlett">johansson</string>
    <string name="engranaje">engranaje</string>
    <string name="textv17">Transferir Dinero</string>
    <string name="arrow5">arrow5</string>
    <string name="circulo2">circulo2</string>
    <string name="textv18">inicial nombre</string>
    <string name="textv19">Nombre Destinatario</string>
    <string name="textv20">Email Destinatario</string>
    <string name="angelina">jolie</string>
    <string name="textv21">Notas de Transferencia</string>
    <string name="notas">Agregar notas de transferecia (opcional)</string>
    <string name="arrow6">arrow6</string>
    <string name="linea">linea</string>
    <string name="textv22">Cantidad a transferir</string>
    <string name="transferencia">"   "$ 0000.00</string>
    <string name="textv23">Ingreso de Dinero</string>
    <string name="textv24">Nombre Remitente</string>
    <string name="textv25">Email Remitente</string>
    <string name="textv26">Cantidad a ingresar</string>
    <string name="gal">gadot</string>
    <string name="linea2">linea2</string>
    <string name="ingreso">"   "$ 0000.00</string>
    <string name="arrow7">arrow7</string>
    <string name="notas2">Agregar notas de transferecia (opcional)</string>
    <string name="textv27">Notas de Transferencia</string>
    <string name="arrow8">arrow7</string>
    <string name="btn8">Enviar Dinero</string>
    <string name="btn9">Recibir Dinero</string>
    <string name="textv28">Inicio</string>
    <string name="textv29">Bienvenido(a)</string>
    <string name="textv30">Nombre cliente</string>
    <string name="textv31">Balance Total</string>
    <string name="balance">"   "$ 0000.00</string>
    <string name="foto_cliente">foto_titular</string>
    <string name="foto_cliente2">foto_titular</string>
    <string name="btn10">Enviar Dinero</string>
    <string name="btn11">Recibir Dinero</string>
    <string name="arrow9">arrow9</string>
    <string name="arrow10">arrow10</string>
    <string name="panel1">celeste degrade</string>
    <string name="panel2">gris degrade</string>
    <string name="campana">notificaciones</string>
    <string name="notificacion">por colores</string>
    <string name="textv33">Ultimas Transacciones</string>
    <string name="textv34">No hay transacciones registradas!</string>
    <string name="libro">sin notificaciones</string>
    <string name="ola">detalle</string>
    <string name="logo3">logo3</string>
    <string name="logo4">logo4</string>
    <string name="logo5">logo5</string>
    <string name="logo6">logo6</string>
    <string name="transaccion1">foto_cliente</string>
    <string name="transaccion2">foto_cliente2</string>
    <string name="transaccion3">foto_cliente3</string>
    <string name="transaccion4">foto_cliente4</string>
    <string name="transaccion5">foto_cliente5</string>
    <string name="trans1">Angelina Jolie</string>
    <string name="trans2">Gal Gadot</string>
    <string name="trans3">Jennifer Lawrence</string>
    <string name="trans4">Margot Robbie</string>
    <string name="trans5">Alexandra Daddario</string>
    <string name="date_time1"> Abr Vie 14. 10:23 </string>
    <string name="date_time2"> Abr Lun 24. 13:30 </string>
    <string name="date_time3"> Abr Vie 04. 18:10 </string>
    <string name="date_time4"> Abr Mar 31. 09:12 </string>
    <string name="date_time5"> Abr Vie 02. 08:37 </string>
    <string name="signo1">+</string>
    <string name="signo2">-</string>
    <string name="signo3">+</string>
    <string name="signo4">+</string>
    <string name="signo5">-</string>
    <string name="cantTrans1">"     "$13000.00</string>
    <string name="cantTrans2">"     "$12000000.00</string>
    <string name="cantTrans3">"     "$350000.00</string>
    <string name="cantTrans4">"     "$4703000.00</string>
    <string name="cantTrans5">"     "$12500.00</string>
    <string name="colores">dibujo</string>
    <string name="cascada">cascada</string>
    <string name="cielo">cielo</string>
    <string name="tarjeta">tarjetas</string>
    <string name="mar">colores</string>
    <string name="manos">manos</string>
    <string name="manos2">manos</string>
    <string name="cosmo">noche</string>
    <string name="cosmo2">noche</string>
    <string name="arriba">flecha up</string>
    <string name="abajo">flecha down</string>
    <string name="videoView">video 1</string>
    <string name="videoView2">video 2</string>
    <string name="videoView3">video 3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmento1">recovery pass</string>
    <string name="titulo">Cambio de Contraseña</string>
    <string name="textv35">Email</string>
    <string name="emailUsuario">Ingrese su email </string>
    <string name="contraseña">Nueva Contraseña </string>
    <string name="edt">Ingrese  nueva contraseña de 6 numeros</string>
    <string name="edt2">Vuelva a ingresar contraseña de 6 numeros</string>
    <string name="btn12">Terminar </string>
    <string name="contraseñaR">Repita Nueva Contraseña </string>
    <string name="btnTomarFoto">Tomar foto </string>
    <string name="perfil_image_view"> Foto de perfil </string>
    <string name="ojo4">ojo4</string>
    <string name="ojo5">ojo5</string>
    <string name="perfil_usuario">Mi Perfil</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="estrellado">notificaciones</string>
    <string name="recycler_view_notificaciones_content_description">Lista de notificaciones</string>
    <string name="atras">flecha volver</string>
    <string name="logo7">logo notificaciones</string>
</resources>