<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degrade_sweep"
    android:textAlignment="textEnd"
    tools:context=".Pantalla9RequestM">

    <ImageView
        android:id="@+id/manos2"
        android:layout_width="197dp"
        android:layout_height="189dp"
        android:contentDescription="@string/manos2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267"
        app:srcCompat="@drawable/trasnf" />


    <ImageView
        android:id="@+id/arrow7"
        android:layout_width="41dp"
        android:layout_height="38dp"
        android:contentDescription="@string/arrow7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064"
        app:srcCompat="@drawable/arrow" />

    <TextView
        android:id="@+id/textv23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua"
        android:text="@string/textv23"
        android:textColor="@color/white"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/textv24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textv24"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172"
        tools:text="@string/textv24" />

    <TextView
        android:id="@+id/textv25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textv25"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201" />

    <TextView
        android:id="@+id/textv26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textv26"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355" />

    <TextView
        android:id="@+id/textv27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textv27"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/notas2"
        android:layout_width="368dp"
        android:layout_height="267dp"
        android:autofillHints="@string/notas2"
        android:background="@drawable/redondeo_imagen"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/notas"
        android:inputType="text"
        android:textColorHint="@color/material_dynamic_neutral70"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.749" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="363dp"
        android:layout_height="52dp"
        android:backgroundTint="@color/color3"
        android:text="@string/btn9"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921" />

    <ImageView
        android:id="@+id/arrow8"
        android:layout_width="30dp"
        android:layout_height="31dp"
        android:contentDescription="@string/arrow8"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912"
        app:srcCompat="@drawable/img_11" />

    <ImageView
        android:id="@+id/linea2"
        android:layout_width="293dp"
        android:layout_height="3dp"
        android:contentDescription="@string/linea2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        app:srcCompat="@drawable/degradado4"
        tools:ignore="UnusedAttribute,ImageContrastCheck" />

    <EditText
        android:id="@+id/ingreso"
        android:layout_width="284dp"
        android:layout_height="61dp"
        android:autofillHints="ingreso"
        android:background="@drawable/redondeo_imagen"
        android:ems="10"
        android:hint="@string/ingreso"
        android:inputType="numberDecimal"
        android:textAlignment="textStart"
        android:textColorHint="@color/material_dynamic_neutral90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />

    <ImageView
        android:id="@+id/gal"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/oval"
        android:clipToOutline="true"
        android:contentDescription="@string/gal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192"
        app:srcCompat="@drawable/gal"
        tools:ignore="UnusedAttribute,ImageContrastCheck" />

    <ImageView
        android:id="@+id/colores2"
        android:layout_width="409dp"
        android:layout_height="371dp"
        android:contentDescription="@string/colores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/colores" />


</androidx.constraintlayout.widget.ConstraintLayout>