<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_degradado2"
    tools:context=".Pantalla6Empty">

    <Button
        android:id="@+id/btn10"
        android:layout_width="182dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/color6"
        android:text="@string/btn10"
        android:textColor="@color/color2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462"
        tools:ignore="UnusedAttribute,ImageContrastCheck" />

    <Button
        android:id="@+id/btn11"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/color3"
        android:text="@string/btn11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462" />

    <ImageView
        android:id="@+id/arrow9"
        android:layout_width="27dp"
        android:layout_height="28dp"
        android:contentDescription="@string/arrow9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46"
        app:srcCompat="@drawable/img_11" />

    <ImageView
        android:id="@+id/arrow10"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:contentDescription="@string/arrow10"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.605"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462"
        app:srcCompat="@drawable/img_11" />

    <ImageView
        android:id="@+id/panel1"
        android:layout_width="387dp"
        android:layout_height="306dp"
        android:contentDescription="@string/panel1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133"
        app:srcCompat="@drawable/fondo_degradado2" />

    <ImageView
        android:id="@+id/panel2"
        android:layout_width="379dp"
        android:layout_height="429dp"
        android:contentDescription="@string/panel2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981"
        app:srcCompat="@drawable/degradado3" />

    <ImageView
        android:id="@+id/noche"
        android:layout_width="566dp"
        android:layout_height="353dp"
        android:layout_marginBottom="34dp"
        android:contentDescription="@string/cosmo"
        app:layout_constraintBottom_toTopOf="@+id/balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/cosmo" />

    <EditText
        android:id="@+id/balance"
        android:layout_width="234dp"
        android:layout_height="55dp"
        android:autofillHints="transferencia"
        android:background="@drawable/redondeo_imagen"
        android:ems="10"
        android:hint="@string/transferencia"
        android:inputType="numberDecimal"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.373" />

    <ImageView
        android:id="@+id/foto_cliente"
        android:layout_width="172dp"
        android:layout_height="164dp"
        android:background="@drawable/boton_redondo"
        android:clipToOutline="true"
        android:contentDescription="@string/foto_cliente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162"
        app:srcCompat="@drawable/scarlett"
        tools:ignore="UnusedAttribute,ImageContrastCheck" />

    <ImageView
        android:id="@+id/logo6"
        android:layout_width="47dp"
        android:layout_height="46dp"
        android:contentDescription="@string/logo6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585"
        app:srcCompat="@drawable/logoalkewallet" />

    <ImageView
        android:id="@+id/campana"
        android:layout_width="35dp"
        android:layout_height="36dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/campana"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345"
        app:srcCompat="@drawable/img_12" />



    <TextView
        android:id="@+id/textv28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua"
        android:text="@string/textv28"
        android:textColor="@color/white"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/textv29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua"
        android:text="@string/textv29"
        android:textColor="@color/material_dynamic_neutral50"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136"
        tools:ignore="UnusedAttribute,ImageContrastCheck" />

    <TextView
        android:id="@+id/textv30"
        android:layout_width="152dp"
        android:layout_height="84dp"
        android:fontFamily="@font/jua"
        android:text="@string/textv30"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.177" />

    <TextView
        android:id="@+id/textv31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textv31"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334" />

    <TextView
        android:id="@+id/textv33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textv33"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572" />

    <TextView
        android:id="@+id/textv34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textv34"
        android:textColor="@color/color3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

    <ImageView
        android:id="@+id/libro"
        android:layout_width="146dp"
        android:layout_height="196dp"
        android:contentDescription="@string/libro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.852"
        app:srcCompat="@drawable/img_15" />

</androidx.constraintlayout.widget.ConstraintLayout>